dataset1235/2025-2/805158916/users/4160895627/executions/2651470117_1462915504.log
== RUN (2025-08-27 12:57:15)
-- CODE: 
from math import *
lado= float(input("Digite o valor: "))
ap= lado/2* math.tan(3.15/5)
# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap= lado/2* math.tan(3.15/5)
                ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap= lado/2* math.tan(3.15/5)
                ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap= lado/2* math.tan(3.15/5)
                ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap= lado/2* math.tan(3.15/5)
                ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap= lado/2* math.tan(3.15/5)
                ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap= lado/2* math.tan(3.15/5)
                ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 13:05:08)
-- CODE: 
import math
lado= float(input("Digite o valor: "))
ap= lado/(2*math.tan)(math.pi/5);
area= 5/2*lado*ap;
print(round(area,2))
# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap= lado/(2*math.tan)(math.pi/5);
              ~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap= lado/(2*math.tan)(math.pi/5);
              ~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap= lado/(2*math.tan)(math.pi/5);
              ~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap= lado/(2*math.tan)(math.pi/5);
              ~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap= lado/(2*math.tan)(math.pi/5);
              ~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap= lado/(2*math.tan)(math.pi/5);
              ~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 13:04:38)
-- CODE: 
import math
lado= float(input("Digite o valor: "))
ap= lado/(2*math.tan)(math.pi/5)
area= 5/2*lado*ap

print(round(area,2))
# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap= lado/(2*math.tan)(math.pi/5)
              ~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap= lado/(2*math.tan)(math.pi/5)
              ~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap= lado/(2*math.tan)(math.pi/5)
              ~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap= lado/(2*math.tan)(math.pi/5)
              ~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap= lado/(2*math.tan)(math.pi/5)
              ~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap= lado/(2*math.tan)(math.pi/5)
              ~^~~~~~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 13:03:52)
-- CODE: 
import math
lado= float(input("Digite o valor: "))
area= 5/2*lado*ap
ap= lado/2*math.tan(math.pi/5)
print(round(area,2))
# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area= 5/2*lado*ap
                   ^^
NameError: name 'ap' is not defined. Did you mean: 'map'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area= 5/2*lado*ap
                   ^^
NameError: name 'ap' is not defined. Did you mean: 'map'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area= 5/2*lado*ap
                   ^^
NameError: name 'ap' is not defined. Did you mean: 'map'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area= 5/2*lado*ap
                   ^^
NameError: name 'ap' is not defined. Did you mean: 'map'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area= 5/2*lado*ap
                   ^^
NameError: name 'ap' is not defined. Did you mean: 'map'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area= 5/2*lado*ap
                   ^^
NameError: name 'ap' is not defined. Did you mean: 'map'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 12:59:54)
-- CODE: 
import math
lado= float(input("Digite o valor: "))
ap= math.tan(3.15/5)
area= 5/2*lado*ap
print(round(area,2))
# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Digite o valor: 16.41
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Digite o valor: 10.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Digite o valor: 20.05
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Digite o valor: 14.58
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Digite o valor: 7.29
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Digite o valor: 18.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 13:06:08)
-- CODE: 
import math
lado= float(input("Digite o valor: "))
ap= lado/(2*math.tan math.pi/5);
area= 5/2*lado*ap;
print(round(area,2))
# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 3
    ap= lado/(2*math.tan math.pi/5);
              ^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 3
    ap= lado/(2*math.tan math.pi/5);
              ^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 3
    ap= lado/(2*math.tan math.pi/5);
              ^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 3
    ap= lado/(2*math.tan math.pi/5);
              ^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 3
    ap= lado/(2*math.tan math.pi/5);
              ^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 3
    ap= lado/(2*math.tan math.pi/5);
              ^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 13:14:56)
-- CODE: 
import math
lado= float(input("Digite o valor: "))
ap= lado/(2*math.tan (math.pi/5));
area= 5/2*lado*ap;
print(round(area,2))
# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Digite o valor: 139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Digite o valor: 61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Digite o valor: 208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Digite o valor: 110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Digite o valor: 27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Digite o valor: 172.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 13:13:29)
-- CODE: 
import math
lado= float(input("Digite o valor: "))
ap= lado/(2*math.tan math.pi/5);
area= 5/2*lado*ap;
print(round(area,2))
# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 3
    ap= lado/(2*math.tan math.pi/5);
              ^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 3
    ap= lado/(2*math.tan math.pi/5);
              ^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 3
    ap= lado/(2*math.tan math.pi/5);
              ^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 3
    ap= lado/(2*math.tan math.pi/5);
              ^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 3
    ap= lado/(2*math.tan math.pi/5);
              ^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 3
    ap= lado/(2*math.tan math.pi/5);
              ^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 13:00:00)
-- CODE: 
import math
lado= float(input("Digite o valor: "))
ap= math.tan(3.15/5)
area= 5/2*lado*ap
print(round(area,2))
# faça seu código aqui!
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Digite o valor: 16.41
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Digite o valor: 10.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Digite o valor: 20.05
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Digite o valor: 14.58
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Digite o valor: 7.29
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Digite o valor: 18.23
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 13:15:02)
-- CODE: 
import math
lado= float(input("Digite o valor: "))
ap= lado/(2*math.tan (math.pi/5));
area= 5/2*lado*ap;
print(round(area,2))
# faça seu código aqui!
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Digite o valor: 139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Digite o valor: 61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Digite o valor: 208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Digite o valor: 110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Digite o valor: 27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Digite o valor: 172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 12:57:28)
-- CODE: 
from math import *
lado= float(input("Digite o valor: "))
ap= lado/2* math.tan(3.15/5)
print(ap)
# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap= lado/2* math.tan(3.15/5)
                ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap= lado/2* math.tan(3.15/5)
                ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap= lado/2* math.tan(3.15/5)
                ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap= lado/2* math.tan(3.15/5)
                ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap= lado/2* math.tan(3.15/5)
                ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap= lado/2* math.tan(3.15/5)
                ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 13:06:10)
-- CODE: 
import math
lado= float(input("Digite o valor: "))
ap= lado/(2*math.tan math.pi/5);
area= 5/2*lado*ap;
print(round(area,2))
# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 3
    ap= lado/(2*math.tan math.pi/5);
              ^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 3
    ap= lado/(2*math.tan math.pi/5);
              ^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 3
    ap= lado/(2*math.tan math.pi/5);
              ^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 3
    ap= lado/(2*math.tan math.pi/5);
              ^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 3
    ap= lado/(2*math.tan math.pi/5);
              ^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 3
    ap= lado/(2*math.tan math.pi/5);
              ^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 12:58:39)
-- CODE: 
import math
lado= float(input("Digite o valor: "))
ap= math.tan(3.15/5)
print(ap)
# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Digite o valor: 0.7291147292409691
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Digite o valor: 0.7291147292409691
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Digite o valor: 0.7291147292409691
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Digite o valor: 0.7291147292409691
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Digite o valor: 0.7291147292409691
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Digite o valor: 0.7291147292409691
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 13:01:32)
-- CODE: 
import math
lado= float(input("Digite o valor: "))
ap= math.tan(math.pi/5)
area= 5/2*lado*ap
print(round(area,2))
# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Digite o valor: 16.35
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Digite o valor: 10.9
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Digite o valor: 19.98
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Digite o valor: 14.53
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Digite o valor: 7.27
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Digite o valor: 18.16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 13:04:16)
-- CODE: 
import math
lado= float(input("Digite o valor: "))
area= 5/2*lado*ap
ap= lado/(2*math.tan)(math.pi/5)
print(round(area,2))
# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area= 5/2*lado*ap
                   ^^
NameError: name 'ap' is not defined. Did you mean: 'map'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area= 5/2*lado*ap
                   ^^
NameError: name 'ap' is not defined. Did you mean: 'map'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area= 5/2*lado*ap
                   ^^
NameError: name 'ap' is not defined. Did you mean: 'map'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area= 5/2*lado*ap
                   ^^
NameError: name 'ap' is not defined. Did you mean: 'map'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area= 5/2*lado*ap
                   ^^
NameError: name 'ap' is not defined. Did you mean: 'map'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area= 5/2*lado*ap
                   ^^
NameError: name 'ap' is not defined. Did you mean: 'map'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
